# blindkey

./: .editorconfig  .envrc  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYRIGHT  Cargo.toml  GOVERNANCE.md  LICENSE  MAINTAINERS.md  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  blindkey_intent.yaml  clippy.toml  cowork.yaml  deny.toml  justfile  rust-toolchain.toml  vault_intent.yaml
.cargo/: audit.toml
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: audit.yml  ci.yml  dco.yml  fuzz.yml  pages.yml  publish-crates.yml  release.yml  scorecard.yml
benches/: README.md  kdf_unlock.rs
crates/blindkey-agent/: Cargo.toml
crates/blindkey-cli/: Cargo.toml
crates/blindkey-cli/src/: agent.rs  clipboard.rs  export.rs  main.rs  unlock_secret.rs
crates/blindkey-cli/src/commands/: mod.rs  sealed.rs
crates/blindkey-cli/tests/: agent_broker.rs  audit_commission.rs  cli.rs  constraint_index.rs  constraint_policy.rs  crypto_shred_rotation.rs  format_freeze.rs  gui_totp_in_app.rs  kdf_floor_policy.rs  live_hw_ffi.rs  marketing_hardware_audit.rs  mlock_install_docs.rs  padme_padding.rs  ptrace_hardening.rs  recovery_codes.rs  sealed_cli.rs  streaming_payload_parse.rs  sync_provisioning.rs  uc23_design_alignment.rs  v1_release.rs  yubikey_strict_default.rs
crates/blindkey-clip/: Cargo.toml
crates/blindkey-clip/src/: lib.rs
crates/blindkey-core/: Cargo.toml
crates/blindkey-gui/: Cargo.toml
crates/blindkey-gui/src/: clip.rs  gui_config.rs  keyfile_gui.rs  main.rs  sealed_gui.rs
crates/blindkey-gui/tests/: uc20_constraints.rs  uc22_constraints.rs  uc23_constraints.rs
crates/blindkey-hardware/: Cargo.toml
crates/blindkey-sys/: Cargo.toml
crates/blindkey-tui/: Cargo.toml
crates/blindkey-tui/src/: clip.rs  main.rs  sealed.rs
crates/blindkey-tui/tests/: uc23_constraints.rs
crates/vault-cli/: Cargo.toml
crates/vault-clip/: Cargo.toml
crates/vault-core/: Cargo.toml
docs/: AGENT_BROKER.md  ARCHITECTURE.md  AUDIT_COMMISSION.md  AUDIT_READINESS.md  CLI.md  CONSTRAINT_INDEX.md  CRATES_IO_TRUSTED_PUBLISHING.md  CRYPTO.md  ENTERPRISE_POSTURE.md  EU_CRA_STATUS.md  EXPORT_COMPLIANCE.md  FILE_FORMAT.md  INSTALL.md  PRD.md  README.md  RELEASE.md  SUPPLY_CHAIN.md  THIRD_PARTY_AUDIT.md  THREAT_MODEL.md  VERIFYING_RELEASES.md
fuzz/: Cargo.toml  README.md
research/: agent_broker_research.md  cargo_vet_research.md  crypto_shred_rotation_research.md  encrypted_cloud_storage_research.md  format_freeze_research.md  gui_totp_in_app_research.md  kdf_floor_policy_research.md  live_hw_ffi_research.md  llm_offensive_threats.md  marketing_hardware_audit_research.md  metadata_leak_research.md  mlock_docker_research.md  padme_padding_research.md  pq_posture_research.md  ptrace_hardening_research.md  recovery_codes_research.md  security_coverage_gaps.md  streaming_payload_parse_research.md  sync_provisioning_research.md  third_party_audit_research.md  ui_architecture.md  v1_release_research.md  vault_spec.md  yubikey_strict_default_research.md
samples/: README.md  keys.txt
scripts/: audit-intake-checklist.sh  audit-readiness.sh  bundle-macos.sh  check-unsafe-isolation.sh  install.sh  publish-crates.sh  reproducible-build.sh  setup-rust.sh
supply-chain/: config.toml
tests/: constraint_coverage.rs
(+154 files in other folders)
